[tool.poetry]
name = "shortener"
version = "0.1.0"
description = ""
authors = []

[[tool.poetry.source]]
name = "spoqa-fury"
url = "https://pypi.fury.io/spoqa/"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.3"
toml = "^0.10.2"
alembic = "^1.8.1"
SQLAlchemy = "^1.4.39"
Flask-Cors = "^3.0.10"
SQLAlchemy-Utils = "^0.38.3"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
